--- a/less/logo.less
+++ b/less/logo.less
@@ -24,7 +24,7 @@
     margin: 0;
     &--footer {
         background: transparent url('../img/logo-pink-blue-mobile.svg') no-repeat;
-        margin: 0;
+        margin-top: 0;
     }
   }
 }
