--- a/less/social.less
+++ b/less/social.less
@@ -41,18 +41,24 @@
 @media @tablet-widths {
   .social {
     margin-bottom: 0;
+    margin-top: 8px;
+    margin-right: 20px;
+  }
+  .footer-copyright {
+    margin-top: 10px;
   }
 }
 @media @desktop-widths {
   .social {
     margin-right: 0;
-    margin-top: 16px;
+    margin-top: 18px;
+    margin-left: 10px;
     &__btn {
       margin: 8px;
     }
   }
     .footer-copyright {
-      margin-top: 14px;
+      margin-top: 17px;
       &__p {
         font-size: 18px;
       }
