Исправление главной страницы

--- a/less/content-map.less
+++ b/less/content-map.less
@@ -10,10 +10,12 @@
 @media @tablet-widths {
   .content-map {
     height: 380px;
+    margin-bottom: -55px;
   }
 }
 @media @desktop-widths {
   .content-map {
     height: 500px;
+    margin-bottom: -5px;
   }
 }
