--- a/less/diagram.less
+++ b/less/diagram.less
@@ -7,12 +7,14 @@
     margin-left: 50%;
     margin-top: 97px;
     margin-bottom: 121px;
+    margin-right: 0px;
     position: relative;
     &__h2 {
       font-family: "Open Sans Bold", Arial, sans-serif;
       font-size: 30px;
       line-height: 36px;
       margin-bottom: 9px;
+      padding-right: 150px;
       margin-left: -2px;
       text-align: left;
       }
