--- a/less/intro.less
+++ b/less/intro.less
@@ -69,17 +69,22 @@
 
     &__image {
       margin-top: 0;
-      height: 855px;
+      height: 729px;
       background: url('../img/iphone-hand-mobile@1x.png') no-repeat 75% bottom,
                   url('../img/bg-back-mobile@1x.jpg') no-repeat 50% 100%;
-      background-size: 552px 645px, cover;
+      background-size: 470px 545px, cover;
     }
     &__download-block {
       background-color: transparent;
       position: absolute;
       top: 200px;
-      width: 50%;
-      padding-top: 10px;
+      width: 300px;
+      padding-top: 5px;
+      margin-left: 40px;
+    }
+    &__intro-wrapper {
+      margin-right: 20px;
+      margin-left: 40px;
     }
     &__header {
       display: inline;
@@ -88,19 +93,21 @@
       line-height: 48px;
       color: #ffffff;
       display: block;
-      margin-left: 65px;
-      margin-right: 65px;
+      margin-left: 0px;
+      margin-right: 20px;
       text-align: center;
     }
     &__download {
       margin-top: 30px;
       width: 300px;
       margin-bottom: 42px;
+      margin-left: 0;
+      margin-right: 0;
     }
     &__message {
       font-size: 18px;
       width: auto;
-      margin: 0 10px;
+      margin-right: 20px;
       padding-top: 37px;
     }
   }
@@ -109,27 +116,31 @@
   .intro {
     &__image {
       margin-top: 0;
+      height: 853px;
     }
     &__header {
       font-size: 50px;
       line-height: 61px;
-      margin-left: 92px;
-      margin-top: 18px;
-      margin-right: 150px;
+      margin-left: 0px;
+      margin-top: 15px;
+      margin-right: 20px;
       padding-bottom: 18px;
     }
+    &__download-block {
+      margin-left: 130px;
+    }
     &__download {
-      margin-left: 129px;
       font-size: 21px;
     }
     &__intro-wrapper {
-      margin-left: 169px;
-      margin-top: 62px;
+      margin-left: 40px;
+      margin-top: 63px;
+
     }
     &__message {
       padding-top: 57px;
-      margin-left: 105px;
-      margin-right: 160px;
+      margin-left: 0px;
+      margin-right: 20px;
     }
   }
 }
