--- a/less/content-map.less
+++ b/less/content-map.less
@@ -10,10 +10,16 @@
 @media @tablet-widths {
   .content-map {
     height: 380px;
+    background: url('../img/bg-triangle-white-footer.svg') no-repeat 0 0,
+                url('../img/bg-map-tablet@1x.jpg') no-repeat;
+    background-size: 100% auto, cover;
   }
 }
 @media @desktop-widths {
   .content-map {
     height: 500px;
+    background: url('../img/bg-triangle-white-footer.svg') no-repeat 0 0,
+                url('../img/bg-map-desktop@1x.jpg') no-repeat;
+    background-size: 100% auto, cover;
   }
 }
