--- a/less/feedback.less
+++ b/less/feedback.less
@@ -23,6 +23,14 @@
     color: #d22856;
     padding: 0 20px 0px 20px;
   }
+  &__item2:hover &__item{
+    color: #283645;
+    text-decoration: underline;
+  }
+  &__item2:active &__item{
+    color: #cdcfd1;
+    text-decoration: underline;
+  }
 }
 .feedback a {
   text-decoration: none;
