--- a/less/slider.less
+++ b/less/slider.less
@@ -28,6 +28,9 @@
     display:inline-block;
     margin: 0 10px;
   }
+  &__controls label:hover {
+    background-color: #7e868f;
+  }
 }
 .slider input[type=radio] {
   display: none;
@@ -88,6 +91,7 @@
 }
 @media @desktop-widths {
     .slider {
+      position: relative;
       margin-top: 50px;
       &__inner {
         width: 820px;
