--- a/less/social.less
+++ b/less/social.less
@@ -1,6 +1,8 @@
   .social {
     &__btn {
       display: inline-block;
+      text-align: center;
+      line-height: 60px;
       margin: 0 6px;
       font-size: 0;
       width: 45px;
@@ -8,35 +10,27 @@
       border-radius: 50%;
       box-shadow:0 0 0 3px #f2f2f2;
       &--twitter {
-        background: url('../img/icon-twitter.svg') no-repeat 50% 50%;
+        //background: url('../img/icon-twitter.svg') no-repeat 50% 50%;
       }
       &--facebook {
-        background: url('../img/icon-facebook.svg') no-repeat 50% 50%;
+        //background: url('../img/icon-facebook.svg') no-repeat 50% 50%;
       }
       &--youtube{
-        background: url('../img/icon-youtube.svg') no-repeat 50% 50%;
+        //background: url('../img/icon-youtube.svg') no-repeat 50% 50%;
       }
+
+    }
+    &__btn:hover {
+      box-shadow:0 0 0 3px #283645;
+    }
+    &__btn:active {
+      box-shadow:0 0 0 3px #f2f2f2;
+    }
+    &__btn:active path{
+
+      opacity: 0.3;
     }
     margin-bottom: 36px;
-  }
-  .footer-copyright {
-    &__p {
-      display: inline-block;
-      vertical-align: middle;
-      font-family: "Open Sans", Arial, sans-serif;
-      font-size: 14px;
-      line-height: 18px;
-      color: #000000;
-      padding-top: 10px;
-      padding-right: 10px;
-    }
-    &__academy-logo {
-      display: inline-block;
-      width: 27px;
-      height: 37px;
-      background: url('../img/logo-htmlacademy.svg') no-repeat 50% 50%;
-      font-size: 0;
-    }
   }
 @media @tablet-widths {
   .social {
