--- a/less/upload-image.less
+++ b/less/upload-image.less
@@ -24,6 +24,7 @@
   }
   &__scale-item {
 	display: inline-block;
+  vertical-align: top;
     font-size: 0;
 	   width: 50px;
     height: 50px;
@@ -32,17 +33,35 @@
   &__filter {
 	  display: block;
   }
+  &__crop-icon:active &__crop-path{
+    fill: #d22856;
+  }
+  &__fill-icon:active &__fill-path{
+    fill: #d22856;
+  }
+  &__contrast-icon:active path{
+    fill: #d22856;
+  }
+  &__crop-icon:hover &__crop-path {
+    fill: #8d949b;
+  }
+  &__fill-icon:hover &__fill-path {
+    fill: #8d949b;
+  }
+  &__contrast-icon:hover path {
+    fill: #8d949b;
+  }
   &--crop {
     width:45px;
     height: 45px;
-    background: url('../img/icon-editor-crop.svg') no-repeat 0 0;
+    //background: url('../img/icon-editor-crop.svg') no-repeat 0 0;
 	  background-size: cover;
   }
   &--fill {
     width: 48px;
     height: 44px;
     margin-left: 3px;
-    background: url('../img/icon-editor-fill.svg') no-repeat 0 0;
+    //background: url('../img/icon-editor-fill.svg') no-repeat 0 0;
 	  background-size: cover;
   }
   &--contrast {
@@ -51,7 +70,7 @@
     position: relative;
     top: 6px;
     margin-left: 17px;
-  	background: url('../img/icon-editor-contrast.svg') no-repeat 0 0;
+  	//background: url('../img/icon-editor-contrast.svg') no-repeat 0 0;
 		background-size: cover;
   }
   &__btn {
@@ -67,9 +86,27 @@
     font-weight: bold;
     background-color: #ffffff;
     color: #d22856;
+    &:hover {
+      background-color: #d22856;
+      color: #ffffff;
+    }
+    &:active {
+      color: #e07e94;
+      background-color: #d22856;
+    }
     &--disabled {
       border-color: #dddfe0;
       color: #dddfe0;
+      &:hover {
+        background-color: #ffffff;
+        border-color: #b5b9be;
+        color: #b5b9be;
+      }
+      &:active {
+        border-color: #b5b9be;
+        color: #ffffff;
+        background-color: #b5b9be;
+      }
     }
   }
   &__form {
@@ -92,11 +129,15 @@
       width: 10px;
       height: 10px;
       border:2px solid #d22856;
+      cursor: pointer;
       border-radius: 50%;
       position: absolute;
       right: 33px;
       top: -5px;
       background-color: #ffffff;
+      &:active {
+        background-color: #d22856;
+      }
     }
   }
   &__scale--crop, &__scale--fill, &__scale--contrast	{
@@ -119,6 +160,18 @@
 				border-top: none;
 				background-color: #f2f2f2;
 		}
+    &__crop-icon {
+      width:22px;
+      height: 22px;
+    }
+    &__fill-icon {
+      width: 24px;
+			height: 22px;
+    }
+    &__contrast-icon {
+      width: 16px;
+			height: 16px;
+    }
     &__btn {
       width: 260px;
       margin-bottom: 24px;
