--- a/less/information.less
+++ b/less/information.less
@@ -59,6 +59,9 @@
       line-height: 48px;
       margin: 0;
       padding: 0 40px;
+      &--second {
+        margin: 0 40px;
+      }
     }
     &__h2:last-child {
       padding: 0 55px;
@@ -66,7 +69,7 @@
     &__features {
       padding-bottom: 0;
       padding-left: 50%;
-      padding-top: 75px;
+      padding-top: 74px;
       padding-bottom: 10px;
       text-align: left;
 
@@ -78,8 +81,9 @@
     &__image {
       &--item3 {
         right:25%;
-        bottom: 45px;
-        transform: scale(1.7);
+        bottom: 0px;
+        height: 482px;
+        background: url('../img/iphone-screen-3-tablet@1x.png') no-repeat 50% 100%;
       }
     }
   }
@@ -89,8 +93,9 @@
     &__h2 {
       font-size: 50px;
       line-height: 60px;
-
-
+      &--second {
+        margin: 0 200px;
+      }
     }
     &__h3 {
       position: relative;
@@ -101,12 +106,10 @@
       padding: 0 15px;
       overflow: hidden;
       display: block;
-      top: -20px;
+      top: 0px;
       background-color: #f2f2f2;
-      padding-top: 58px;
-      padding-bottom: 3px;
-      box-shadow: 0 -10px 10px -10px black;
-
+      padding-top: 55px;
+      padding-bottom: 25px;
     }
     &__header {
       margin-top: 18px;
@@ -117,7 +120,6 @@
       line-height: 30px;
       text-align: center;
       margin: 0 30px;
-
     }
     &__features {
       display: flex;
@@ -129,29 +131,29 @@
       width: 300px;
     }
     &__image {
-      width: 186px;
-      height: 320px;
+      width: 300px;
+      height: 300px;
       margin: 0 auto;
       overflow: hidden;
       position: relative;
       bottom: 0px;
-
       &--item1, &--item2 {
         display:block;
       }
       &--item1 {
-          background: url('../img/iphone-screen-mobile@1x.png') no-repeat 50% 0;
-          background-size: cover;
+          background: url('../img/iphone-screen-1-desktop@1x.png') no-repeat 50% 0;
+          background-size: contain;
       }
       &--item2 {
-          background: url('../img/iphone-screen-mobile@1x.png') no-repeat 50% 0;
-          background-size: cover;
+          background: url('../img/iphone-screen-2-desktop@1x.png') no-repeat 50% 0;
+          background-size: contain;
       }
       &--item3 {
+        background: url('../img/iphone-screen-3-desktop@1x.png') no-repeat 50% 0;
+        background-size: contain;
         position: relative;
         transform: none;
         right: 0;
-        background-size: cover;
       }
     }
   }
