--- a/less/forms.less
+++ b/less/forms.less
@@ -1,11 +1,12 @@
 .forms {
-
+  margin-bottom: 56px;
+  min-width: 320px;
   &__competition {
     min-width: 320px;
     display: block;
     height: 235px;
     width: 100%;
-    background: url('../img/bg-back-mobile@1x.jpg') no-repeat 50% 100%;
+    background: url('../img/bg-back-mobile@1x.jpg') no-repeat 50% 0;
     background-size: cover;
   }
   &__h1 {
@@ -49,7 +50,7 @@
     }
   }
   &__textfield {
-    margin-bottom: 55px;
+    margin-bottom: 2px;
   }
 
   &__input-item {
@@ -58,11 +59,19 @@
   }
   &__input-text {
     width: 100%;
-    height: 57px;
+    height: 63px;
     border: 2px solid #e5e5e5;
+    box-sizing: border-box;
     border-radius: 3px;
     margin-bottom: 15px;
     margin-top: 5px;
+    &:hover {
+      border-color: #283645;
+    }
+    &:focus {
+        border-color:#d22856;
+        outline-color: #d22856;
+    }
     }
   &__label {
     position: absolute;
@@ -93,7 +102,7 @@
       background-color: #f2f2f2;
     }
     &--radio {
-      margin-top: 15px;
+      margin-top: 10px;
       padding-top: 36px;
       margin-bottom: 56px;
     }
@@ -131,6 +140,10 @@
     position: absolute;
     left: 0;
     top: 22px;
+
+  }
+  &__item:hover label::before {
+      border-color: #3d4a57;
   }
   &__checkbox-label::before {
     border-radius: 3px;
@@ -163,8 +176,14 @@
   &__checkbox:checked + label::after {
     border-color: #d22856;
   }
+  &__checkbox:checked + label::before {
+    border-color: #d22856;
+  }
   &__radio:checked + label::after {
     background-color: #d22856;
+  }
+  &__radio:checked + label::before{
+    border-color: #d22856;
   }
   &__commit {
     display: flex;
@@ -212,6 +231,15 @@
     line-height: 30px;
     color: #ffffff;
     margin-bottom: 35px;
+    &:hover {
+      background-color:#1c9b5e;
+      border-color: #1c9b5e;
+    }
+    &:active {
+      background-color:#1c9b5e;
+      border-color: #1c9b5e;
+      color: #7abc98;
+    }
   }
   &__required-fields {
     font-family: "Open Sans", Arial, sans-serif;
@@ -230,12 +258,14 @@
 }
 @media @tablet-widths {
   .forms {
+    margin-bottom: 30px;
     &__page-forms {
       display: flex;
       flex-direction: column;
     }
     &__competition {
       height: 440px;
+      background: url('../img/bg-back-tablet@1x.jpg') no-repeat 50% 0;
     }
     &__h1 {
       display: block;
@@ -271,11 +301,9 @@
         margin-bottom: 20px;
       }
     }
-
     &__radio-items {
       margin-top: 22px;
     }
-
     &__label {
       font-size: 18px;
       line-height: 30px;
@@ -288,27 +316,27 @@
     &__input-text {
       margin: 0 auto;
       box-sizing: border-box;
-      height: 62px;
+      height: 64px;
     }
     &__input-item--telephone::after {
       content: '';
       display: block;
       position: absolute;
-      width: 62px;
-      height: 62px;
-      top: 0;
-      right: 0;
-      background-color: #e5e5e5;
+      width: 60px;
+      height: 60px;
+      top: 2px;
+      right: 2px;
+      background: #e5e5e5 url('../img/icon-phone.svg') no-repeat 50% 50%;
     }
     &__input-item--mail::after {
       content: '';
       display: block;
       position: absolute;
-      width: 62px;
-      height: 62px;
-      background-color: #e5e5e5;
-      top: 0;
-      right: 0;
+      width: 60px;
+      height: 60px;
+      background: #e5e5e5 url('../img/icon-mail.svg') no-repeat 50% 50%;
+      top: 2px;
+      right: 2px;
     }
     &__contacts-items {
       margin-top: 35px;
@@ -324,6 +352,7 @@
         order: 2;
         padding-left: 40px;
         padding-right: 40px;
+        padding-bottom: 25px;
         margin-top: 20px;
       }
       &--radio {
@@ -340,7 +369,7 @@
       &--commit {
         padding-top: 30px;
         padding-bottom: 50px;
-        margin-top: 31px;
+        margin-top: 25px;
       }
     }
     &__checkbox-items {
@@ -409,9 +438,10 @@
   }
 @media @desktop-widths {
   .forms {
+    margin-bottom: 25px;
     &__h1 {
       font-size: 50px;
-      margin: 0 190px;
+      margin: 0 300px;
       padding-top: 177px;
     }
     &__h2 {
@@ -420,6 +450,7 @@
     }
     &__competition {
       height: 396px;
+      background: url('../img/bg-back-desktop@1x.jpg') no-repeat 50% 0;
     }
     &__page-forms {
       display: flex;
