--- a/less/main-nav.less
+++ b/less/main-nav.less
@@ -1,47 +1,60 @@
 .main-nav {
-  height: 47px;
   background-color: #283645;
   border-bottom: 1px solid black;
-  padding-top: 22px;
   position: relative;
-  &--opacity{
-    background-color: rgba(40, 54, 69, 0.7);
-    margin-bottom: -66px;
-    }
+  &--hide {
+    display: none;
+  }
+  &__burger:hover path{
+    fill: #d22856;
+  }
+  &__burger:active path {
+   fill: rgba(210, 40, 86, .3);
+  }
+  &__cross:hover path{
+    fill: #d22856;
+  }
+  &__cross:active path {
+   fill: rgba(210, 40, 86, .3);
+  }
   &__switch {
     position: absolute;
     cursor: pointer;
     border: none;
+    padding: 0;
+    background: none;
+    top: 21px;
+    right: 20px;
+    width: 50px;
+    height: 24px;
     &--cross {
       top: 20px;
       right: 20px;
       width: 25px;
-      height: 25px;
-      background: url('../img/icon-menu-cross.svg') no-repeat;
-    }
-    &--burger {
-      background: url('../img/icon-menu-burger.svg') no-repeat;
-      top: 21px;
-      right: 20px;
-      width: 50px;
       height: 25px;
     }
   }
 }
 @media @tablet-widths {
   .main-nav {
-    height: 110px;
-    padding: 25px 40px;
     background-color: rgba(40, 54, 69, 0.8);
     box-sizing: border-box;
     margin-bottom: -110px;
     border-bottom: none;
+    &--opacity {
+      background-color: #283645;
+    }
     &__switch {
-      top: 45px;
+      top: 43px;
       right: 40px;
       width: 50px;
-      height: 25px;
-      background: url('../img/icon-menu-burger.svg') no-repeat;
+      height: 24px;
+      &--cross {
+        top: 43px;
+        right: 40px;
+        width: 25px;
+        height: 25px;
+      }
     }
   }
 }
