--- a/less/style.less
+++ b/less/style.less
@@ -39,7 +39,7 @@ body {
   font-family: Open Sans Light;
   src: url("../fonts/opensanslight.woff");
 }
-h1, h2, h3, p {
+h1, h2, h3, h4, p {
   margin: 0;
   padding: 0;
   font-weight: normal;
