Исправление страницы фотографий

--- a/less/upload-image.less
+++ b/less/upload-image.less
@@ -8,17 +8,18 @@
   }
   &__wrap-image {
 	background-color: #f2f2f2;
+  margin-top: 42px;
   }
   &__wrap-button {
 	border-top: 1px solid #dddfe0;
 	background-color: #f2f2f2;
-	padding-top: 24px;
-  padding-bottom: 31px;
-  margin-bottom: 40px;
+	padding-top: 9px;
+  padding-bottom: 30px;
+  margin-bottom: 15px;
   }
   &__filters {
     margin: 0 auto;
-    margin-top: 10px;
+    margin-top: 12px;
       width: 224px;
     font-size: 0;
   }
@@ -54,14 +55,13 @@
   &--crop {
     width:45px;
     height: 45px;
-    //background: url('../img/icon-editor-crop.svg') no-repeat 0 0;
 	  background-size: cover;
   }
   &--fill {
     width: 48px;
     height: 44px;
     margin-left: 3px;
-    //background: url('../img/icon-editor-fill.svg') no-repeat 0 0;
+    margin-top: 5px;
 	  background-size: cover;
   }
   &--contrast {
@@ -70,7 +70,6 @@
     position: relative;
     top: 6px;
     margin-left: 17px;
-  	//background: url('../img/icon-editor-contrast.svg') no-repeat 0 0;
 		background-size: cover;
   }
   &__btn {
@@ -78,10 +77,9 @@
     height: 55px;
     display: block;
     border: 3px solid #d22856;
-    margin: 12px auto;
+    margin: 0 auto;
     border-radius: 55px;
     font-size: 18px;
-    line-height: 18px;
     font-family: "Open Sans Bold", Arial, sans-serif;
     font-weight: bold;
     background-color: #ffffff;
@@ -112,7 +110,7 @@
   &__form {
     display: block;
     margin-top: 29px;
-    margin-bottom: 72px;
+    margin-bottom: 0px;
   }
   &__scale {
     margin-top: 34px;
@@ -146,17 +144,17 @@
 }
 @media @tablet-widths {
 	.upload-image {
-    margin-top: 37px;
-    margin-bottom: -53px;
+    margin-top: 70px;
+    margin-bottom: 0px;
 		display: flex;
 		background-color: #f2f2f2;
 		padding: 0 40px;
     padding-top: 57px;
 		justify-content: space-between;
 		&__wrap-button {
-        padding-top: 55px;
+        padding-top: 36px;
         margin-bottom: 0;
-        margin-left: -5px;
+        margin-left: -10px;
 				border-top: none;
 				background-color: #f2f2f2;
 		}
@@ -172,6 +170,15 @@
       width: 16px;
 			height: 16px;
     }
+    &__crop-icon &__crop-path{
+      fill: #d22856;
+    }
+    &__fill-icon &__fill-path{
+      fill: #d22856;
+    }
+    &__contrast-icon path{
+      fill: #d22856;
+    }
     &__btn {
       width: 260px;
       margin-bottom: 24px;
@@ -183,6 +190,7 @@
 		}
 		&__wrap-image{
 			width: 300px;
+      margin-top: 0;
 		}
 		&__filter {
 			display: block;
@@ -212,7 +220,7 @@
 				display: block;
 				position: relative;
 				width: 100%;
-				height: 37px;
+				height: 38px;
 				font-size: 0;
 				margin: 0;
 				border-bottom: 1px solid gray;
@@ -250,18 +258,17 @@
 }
 @media @desktop-widths {
 .upload-image {
-  margin-top: 33px;
+  margin-top: 65px;
   padding-left: 80px;
   padding-right: 60px;
   padding-bottom: 57px;
   margin-left: 130px;
   margin-right: 130px;
-  margin-bottom: 0;
+  margin-bottom: 48px;
     &__wrap-filters {
-      width: 50%;
       padding-top:10px;
       margin-top: -24px;
-      margin-right: 8px;
+      margin-right: 0px;
     }
     &__wrap-image{
       width: 300px;
@@ -288,6 +295,18 @@
       height: 32px;
       top: -14px;
       left: -10px;
+    }
+    &__crop-icon {
+      width:44px;
+      height: 44px;
+    }
+    &__fill-icon {
+      width: 48px;
+			height: 43px;
+    }
+    &__contrast-icon {
+      width: 32px;
+			height: 32px;
     }
     &__scale {
       display: none;
@@ -324,9 +343,12 @@
     }
     &__filters {
       width: 410px;
+      margin: 0;
     }
     &__wrap-button {
       padding-top: 146px;
+      margin-left: 0px;
+      padding-bottom: 0;
     }
     &__form {
       display: flex;
