--- a/less/logo.less
+++ b/less/logo.less
@@ -3,9 +3,16 @@
   text-decoration: none;
   margin-left: 20px;
   padding-top: 24px;
-  padding-bottom: 24px;
+  padding-bottom: 20px;
   width: 75px;
   height: 22px;
+  &--footer {
+    width: 147px;
+    height: 40px;
+    font-size: 0;
+    margin-bottom: 23px;
+    margin-left: 0px;
+  }
   &__tablet, &__desktop {
     display: none;
   }
@@ -21,11 +28,7 @@
       opacity: 0.3;
     }
   }
-  &--footer {
-    font-size: 0;
-    margin-bottom: 37px;
-    margin-left: 9px;
-  }
+
   &:hover &__mobile path {
    fill: #d22856;
   }
