--- a/less/photo.less
+++ b/less/photo.less
@@ -1,16 +1,17 @@
 .photo {
   color: #283645;
+  margin-bottom: 3px;
+  padding-top: 45px;
   &__h2 {
     font-family: "Open Sans", Arial, sans-serif;
     font-size: 14px;
     line-height: 30px;
-    padding-top: 45px;
-    padding-bottom: 33px;
     text-align: center;
-    margin: 0 40px;
+    margin: 0 30px;
+    display: block;
   }
   &__wrap {
-    margin-bottom: -26px;
+    margin-bottom: 42px;
     min-width: 320px;
   }
   &__item {
@@ -18,7 +19,9 @@
     position: relative;
 
     &--first {
-      margin: 15px 0;
+      margin-top: 49px;
+      margin-left: 0;
+      margin-right: 0;
       margin-bottom: 20px;
       position: relative;
       background-color: #ffffff;
@@ -51,7 +54,7 @@
     &--first {
       margin: 0 20px;
       width: auto;
-      padding-top: 19px;
+      padding-top: 17px;
       padding-bottom: 20px;
       background-color: #f2f2f2;
     }
@@ -111,11 +114,12 @@
 }
 @media @tablet-widths {
   .photo {
-    margin-top: 33px;
+    margin-top: 91px;
+    padding: 0;
     &__h2 {
       font-size: 18px;
       line-height: 30px;
-      margin: 0 150px;
+      margin: 0 120px;
     }
     &__item {
       margin: 0;
@@ -127,6 +131,7 @@
         background-color: #ffffff;
         width: 100%;
         height: auto;
+        margin-top: 76px;
         &::before {
           top:57px;
           right:40px;
@@ -165,6 +170,7 @@
     }
     &__wrap {
       margin: 0 40px;
+      margin-bottom: 44px;
       display: flex;
       flex-wrap: wrap;
       align-content: center;
@@ -199,21 +205,23 @@
 }
 @media @desktop-widths {
   .photo {
-    margin-top: 55px;
-    margin-bottom: -88px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 91px;
     &__h2 {
-      padding-top: 93px;
       margin: 0 300px;
     }
     &__wrap {
       margin-top: 97px;
       margin-left: 130px;
       margin-right: 130px;
+      margin-bottom: 5px;
     }
     &__item {
       height: 555px;
       margin-bottom: 54px;
       &--first {
+        margin-top: 88px;
         &::before {
           top:53px;
           right:130px;
@@ -232,6 +240,12 @@
       &--first {
         margin-left: 130px;
         margin-right: 130px;
+      }
+    }
+    &__like {
+      &--first {
+        top: 15px;
+        right: 62px;
       }
     }
   }
