--- a/less/diagram.less
+++ b/less/diagram.less
@@ -38,7 +38,7 @@
       width: 240px;
       height: 274px;
       position: absolute;
-      background: url('../img/timer.png') no-repeat 0 0;
+      background: url('../img/icon-timer.svg') no-repeat 0 0;
       background-size: contain;
       left: -308px;
       top:-36px;
