--- a/less/footer-copyright.less
+++ b/less/footer-copyright.less
@@ -15,14 +15,16 @@
     vertical-align: middle;
     width: 27px;
     height: 34px;
-
     font-size: 0;
-    &:hover path{
-      fill:#283645;
-    }
-    &:active path {
-      fill: #bec2c7;
-    }
+  }
+  &__academy-logo-icon{
+    fill: #d22856;
+  }
+  &__academy-logo-icon:hover {
+    fill: #283645;
+  }
+  &__academy-logo-icon:active {
+    fill: #bec2c7;
   }
 }
 @media @tablet-widths {
