--- a/less/forms.less
+++ b/less/forms.less
@@ -6,10 +6,10 @@
     min-width: 320px;
     height: 240px;
     background: url('../img/bg-back-mobile@1x.jpg') no-repeat 50% 0;
-    background-size: 100%;
+    background-size: cover;
     @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
       background: url('../img/bg-back-mobile@2x.jpg') no-repeat 50% 0;
-      background-size: 100%;
+      background-size: cover;
     }
   }
   &__h1 {
@@ -323,10 +323,10 @@
     &__competition {
       height: 440px;
       background: url('../img/bg-back-tablet@1x.jpg') no-repeat 50% 0;
-      background-size: 100%;
+      background-size: cover;
       @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
         background: url('../img/bg-back-tablet@2x.jpg') no-repeat 50% 0;
-        background-size: 100%;
+        background-size: cover;
       }
     }
     &__h1 {
@@ -532,27 +532,28 @@
     &__h1 {
       font-size: 50px;
       margin: 0 150px;
-      padding-top: 169px;
+      padding-top: 174px;
     }
     &__h2 {
       margin: 0 220px;
       padding-bottom: 78px;
     }
     &__competition {
-      height: 391px;
+      height: 395px;
       background: url('../img/bg-back-desktop@1x.jpg') no-repeat 50% 0;
-      background-size: 100%;
+      background-size: cover;
       @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
         background: url('../img/bg-back-desktop@2x.jpg') no-repeat 50% 0;
-        background-size: 100%;
+        background-size: cover;
       }
     }
     &__page-forms {
       display: flex;
+      width: 940px;
       flex-direction: row;
       flex-wrap: wrap;
       justify-content: space-between;
-      margin: 0 130px;
+      margin: 0 auto;
     }
     &__name-wrap {
       order: -3;
@@ -613,7 +614,8 @@
 
       }
       &--commit {
-        margin: 0 130px;
+        margin: 0 auto;
+        width: 936px;
         padding-bottom: 44px;
       }
     }
