--- a/less/slider.less
+++ b/less/slider.less
@@ -94,7 +94,7 @@
       position: relative;
       margin-top: 50px;
       &__inner {
-        width: 820px;
+        width: 68.4%;
         margin: 0 auto;
         &--table {
           width: 940px;
