--- a/less/content-map.less
+++ b/less/content-map.less
@@ -2,24 +2,44 @@
   min-width: 320px;
   height: 200px;
   width: 100%;
-  background: url('../img/bg-triangle-white-footer.svg') no-repeat 0 0,
-              url('../img/bg-map-mobile@1x.png') no-repeat;
-  background-size: 100% auto, cover;
+  background: url('../img/bg-map-mobile@1x.png') no-repeat;
+  background-size: cover;
   overflow: hidden;
+  &::before {
+    content:'';
+    display: block;
+    position: absolute;
+    background: url('../img/bg-triangle-white-footer.svg') no-repeat center bottom;
+    background-size: 100% 35px;
+    width: 100%;
+    height: 35px;
+    margin-bottom: -120px;
+    z-index: 1;
+  }
+  &__frame {
+    z-index: 0;
+    overflow: hidden;
+  }
 }
 @media @tablet-widths {
   .content-map {
     height: 380px;
-    background: url('../img/bg-triangle-white-footer.svg') no-repeat 0 0,
-                url('../img/bg-map-tablet@1x.jpg') no-repeat;
-    background-size: 100% auto, cover;
+    background: url('../img/bg-map-tablet@1x.jpg') no-repeat;
+    background-size: cover;
+    &::before {
+      height: 70px;
+      background-size: 100% 70px;
+    }
   }
 }
 @media @desktop-widths {
   .content-map {
     height: 500px;
-    background: url('../img/bg-triangle-white-footer.svg') no-repeat 0 0,
-                url('../img/bg-map-desktop@1x.jpg') no-repeat;
-    background-size: 100% auto, cover;
+    background: url('../img/bg-map-desktop@1x.jpg') no-repeat;
+    background-size: cover;
+    &::before {
+      height: 105px;
+      background-size: 100% 105px;
+    }
   }
 }
