--- a/less/information.less
+++ b/less/information.less
@@ -1,8 +1,8 @@
 .information {
   min-width: 320px;
   &__header {
-    padding-top: 25px;
-    padding-bottom: 20px;
+    padding-top: 27px;
+    padding-bottom: 19px;
   }
   &__h2 {
     font-family: "Open Sans Light", Arial, sans-serif;
@@ -18,7 +18,7 @@
   &__features {
     position: relative;
     text-align: center;
-    padding-bottom: 290px;
+    padding-bottom: 287px;
     background: #f2f2f2 url('../img/bg-triangle-white.svg') no-repeat 0 0;
     background-size: 100% auto;
     overflow: hidden;
@@ -42,7 +42,7 @@
     }
     &--item3 {
       position: absolute;
-      bottom: -40px;
+      bottom: -43px;
       background: url('../img/iphone-screen-mobile@1x.png') no-repeat 50% 0;
       background-size: auto 320px;
       @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
@@ -59,7 +59,7 @@
       width:350px;
     }
     &__header {
-      padding-top: 50px;
+      padding-top: 48px;
       padding-bottom: 45px;
     }
     &__h2 {
@@ -137,13 +137,13 @@
       display: flex;
       padding-left: 0;
       justify-content: space-between;
-      padding: 0 130px;
+      padding: 0 10.84%;
     }
     &__wrapper {
-      width: 300px;
+      width: 31.92%;
     }
     &__image {
-      width: 300px;
+      width: 100%;
       height: 300px;
       margin: 0 auto;
       overflow: hidden;
