--- a/less/intro.less
+++ b/less/intro.less
@@ -12,20 +12,18 @@
 
   &__download {
     display: block;
-    height: 55px;
-    width: 280px;
+    width: 274px;
     color: #ffffff;
     text-decoration: none;
     font-family: "Open Sans Bold", Arial, sans-serif;
     text-align: center;
     font-size: 18px;
-    line-height: 18px;
+    line-height: 19px;
     margin: 0 auto;
-    margin-bottom: 27px;
-    padding: 16px 0;
+    margin-bottom: 25px;
+    padding: 15px 0;
     border: 3px solid #ffffff;
     border-radius: 55px;
-    box-sizing: border-box;
   }
   &__download:hover {
     background-color: #ffffff;
@@ -37,6 +35,7 @@
   }
   &__download-block {
       padding-top: 28px;
+      padding-bottom: 5px;
       min-width: 320px;
       background: #1d2631;
   }
@@ -49,17 +48,17 @@
   }
   &__intro-logo {
     width: 60px;
-    height: 60px;
+    height: 63px;
     font-size: 0;
     }
   &__intro-logo--apple {
-    background: url('../img/logo-apple.svg') no-repeat 50% 100%;
+    background: url('../img/logo-apple.svg') no-repeat 50% 6px;
   }
   &__intro-logo--android {
-    background: url('../img/logo-android.svg') no-repeat 50% 100%;
+    background: url('../img/logo-android.svg') no-repeat 50% 15px;
   }
   &__intro-logo--windows {
-    background: url('../img/logo-microsoft.svg') no-repeat 50% 100%;
+    background: url('../img/logo-microsoft.svg') no-repeat 50% 18px;
   }
   &__message {
     font-family: "Open Sans Light", Arial, sans-serif;
@@ -106,7 +105,7 @@
     }
     &__download {
       margin-top: 30px;
-      width: 300px;
+      width: 294px;
       margin-bottom: 42px;
       margin-left: 10px;
       margin-right: 10px;
@@ -122,18 +121,18 @@
 @media @desktop-widths {
   .intro {
     margin-top: 0;
-    background: url('../img/iphone-hand-desktop@1x.png') no-repeat 100% bottom,
+    background: url('../img/iphone-hand-desktop@1x.png') no-repeat 97% bottom,
                 url('../img/bg-back-desktop@1x.jpg') no-repeat 50% 100%;
     background-size: auto 645px, cover;
-    height: 848px;
+    height: 853px;
     @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-      background: url('../img/iphone-hand-desktop@2x.png') no-repeat 100% bottom,
+      background: url('../img/iphone-hand-desktop@2x.png') no-repeat 97% bottom,
                   url('../img/bg-back-desktop@2x.jpg') no-repeat 50% 100%;
       background-size: auto 645px, cover;
     }
     &__download-block {
       margin-left: 120px;
-      padding-top: 195px;
+      padding-top: 200px;
     }
     &__header {
       font-size: 50px;
