--- a/less/main-header.less
+++ b/less/main-header.less
@@ -1,15 +1,17 @@
 
 .main-header {
-  min-height: 66px;
+  background-color: rgba(29, 38, 49, 0.7);
+  min-height: 70px;
   min-width: 320px;
-  margin-bottom: -66px;
+  box-sizing: border-box;
+  position: relative;
+  margin-bottom: -70px;
 }
 
 @media @tablet-widths {
   .main-header {
     min-height: 110px;
-    box-sizing: border-box;
-    position: relative;
+    margin-bottom: -110px;
   }
 }
 @media @desktop-widths {
