--- a/less/main-menu.less
+++ b/less/main-menu.less
@@ -3,6 +3,8 @@
       display: none;
   }
   &__items {
+    display: flex;
+    flex-direction: column;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -17,7 +19,7 @@
     line-height: 32px;
     text-transform: uppercase;
     text-align: center;
-    padding:15px 0;
+    padding: 15px 0;
     border-top: 1px solid #485461;
     border-bottom: 1px solid black;
   }
@@ -29,20 +31,23 @@
   }
 }
 @media @tablet-widths {
-  .main-menu {
-  }
+
 }
 
 @media @desktop-widths {
   .main-menu {
-    margin: 0;
-    display: block;
+    margin-left: 171px;
+    display: flex;
+    flex-grow: 1;
+    
     &__items {
-      display: flex;
+      width: 100%;
+      flex-direction: row;
       justify-content: space-between;
     }
     &__items li {
-      margin-left: 80px;
+      display: block;
+      margin-left: 0px;
     }
     &__items a {
       font-family: "Open Sans", Arial, sans-serif;
