--- a/less/photo.less
+++ b/less/photo.less
@@ -185,7 +185,8 @@
   	  }
     }
     &__wrap {
-      margin: 0 40px;
+      margin: 0 auto;
+      max-width: 620px;
       margin-bottom: 44px;
       display: flex;
       flex-wrap: wrap;
@@ -227,15 +228,14 @@
     &__h1 {
       font-size: 50px;
       margin: 0 300px;
-      padding-top: 169px;
+      padding-top: 173px;
     }
     &__h2 {
       margin: 0 300px;
     }
     &__wrap {
       margin-top: 97px;
-      margin-left: 130px;
-      margin-right: 130px;
+      max-width: 940px;
       margin-bottom: 5px;
     }
     &__item {
