--- a/less/social.less
+++ b/less/social.less
@@ -2,13 +2,22 @@
     font-size: 0;
     &__btn {
       display: inline-block;
-      text-align: center;
       line-height: 60px;
-      margin: 0 8px;
+      margin: 0 9px;
       width: 45px;
       height: 45px;
+      box-sizing: border-box;
       border-radius: 50%;
       box-shadow:0 0 0 3px #f2f2f2;
+      &--twitter {
+        padding-left: 14px;
+      }
+      &--facebook {
+        padding-left: 18px;
+      }
+      &--youtube {
+        padding-left: 16px;
+      }
     }
     &__btn:hover {
       box-shadow:0 0 0 3px #283645;
@@ -18,6 +27,9 @@
     }
     &__btn:active path{
       opacity: 0.3;
+    }
+    &__btn-icon {
+      fill: #d22856;
     }
     margin-bottom: 41px;
   }
@@ -32,9 +44,8 @@
   .social {
     margin-right: 0;
     margin-top: 28px;
-    margin-left: 15px;
+    margin-left: 5px;
     &__btn {
-      margin: 8px;
     }
   }
 }
