--- a/less/upload-image.less
+++ b/less/upload-image.less
@@ -32,22 +32,31 @@
   &__filter {
 	  display: block;
   }
-  &__crop-icon:active &__crop-path{
+  &__crop-icon {
     fill: #d22856;
   }
-  &__fill-icon:active &__fill-path{
-    fill: #d22856;
-  }
-  &__contrast-icon:active path{
-    fill: #d22856;
-  }
-  &__crop-icon:hover &__crop-path {
+  &__crop-icon:hover {
     fill: #8d949b;
   }
-  &__fill-icon:hover &__fill-path {
+  &__crop-icon:active {
+    fill: #d22856;
+  }
+  &__fill-icon {
+    fill: #b5b9be;
+  }
+  &__fill-icon:active {
+    fill: #d22856;
+  }
+  &__fill-icon:hover {
     fill: #8d949b;
   }
-  &__contrast-icon:hover path {
+  &__contrast-icon {
+    fill: #b5b9be;
+  }
+  &__contrast-icon:active {
+    fill: #d22856;
+  }
+  &__contrast-icon:hover {
     fill: #8d949b;
   }
   &--crop {
@@ -146,9 +155,9 @@
     margin-bottom: 0px;
 		display: flex;
 		background-color: #f2f2f2;
-		padding: 0 40px;
+	   padding: 0 20px;
     padding-top: 57px;
-		justify-content: space-between;
+		justify-content: space-around;
 		&__wrap-button {
         padding-top: 36px;
         padding-bottom: 30px;
@@ -169,13 +178,13 @@
       width: 16px;
 			height: 16px;
     }
-    &__crop-icon &__crop-path{
+    &__crop-icon {
       fill: #d22856;
     }
-    &__fill-icon &__fill-path{
+    &__fill-icon {
       fill: #d22856;
     }
-    &__contrast-icon path{
+    &__contrast-icon {
       fill: #d22856;
     }
     &__btn {
@@ -224,12 +233,10 @@
 				font-size: 0;
 				margin: 0;
 				border-bottom: 1px solid gray;
-
 			}
 			&-image {
 				margin-top: 33px;
 			}
-
 		}
 		&__scale--crop, &__scale--fill, &__scale--contrast	{
 			display: block;
@@ -258,13 +265,14 @@
 }
 @media @desktop-widths {
 .upload-image {
-  margin-top: 65px;
+  padding-bottom: 57px;
   padding-left: 80px;
   padding-right: 60px;
-  padding-bottom: 57px;
-  margin-left: 130px;
-  margin-right: 130px;
+  margin-top: 65px;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 48px;
+  max-width: 800px;
     &__wrap-filters {
       padding-top:10px;
       margin-top: -24px;
@@ -310,32 +318,30 @@
     &__scale {
       display: none;
       margin-left: 35px;
-      &-item {
-        display: block;
-        position: relative;
-        width: 100%;
-        height: 37px;
-        font-size: 0;
-        margin: 0;
-        border-bottom: 1px solid gray;
-
-      }
-      &-image {
-        margin-top: 33px;
-        width: 288px;
-        &-point {
-  			  &--crop {
-  				left: 71px;
-  			  }
-  			  &--fill {
-  				left: 247px;
-  			  }
-  			  &--contrast {
-  				left: 160px;
-  			  }
-  			}
-      }
-
+    }
+    &__scale-item {
+      display: block;
+      position: relative;
+      width: 100%;
+      height: 37px;
+      font-size: 0;
+      margin: 0;
+      border-bottom: 1px solid gray;
+    }
+    &__scale-image {
+      margin-top: 33px;
+      width: 288px;
+      &-point {
+			  &--crop {
+				left: 71px;
+			  }
+			  &--fill {
+				left: 247px;
+			  }
+			  &--contrast {
+				left: 160px;
+			  }
+			}
     }
     &__scale--crop, &__scale--fill, &__scale--contrast	{
       display: block;
